Remove RenderWidgetHostLatencyTracker::OnSwapCompositorFrame

This method adds the right component id to snapshot-related latency
info, We can just send the right component id to the renderer so that
a correction browser-side is not necessary.

Test: Lots of pixel tests take screenshots. Also tested
Page.captureScreenshot manually.

Bug: 810037, 775030
Change-Id: I61242ad63c5af8975331cb405fc629ce19ef92f8
Reviewed-on: https://chromium-review.googlesource.com/1019389
Commit-Queue: Saman Sami <samans@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552204}
Former-commit-id: 478e85a9d6185aaa1f9d059ed889986be6a0a532